# zureshot

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  TODO.md  camera-overlay.html  countdown.html  index.html  jsconfig.json  package.json  pinned-screenshot.html  pnpm-lock.yaml  recording-bar.html  recording-overlay.html  region-selector.html  screenshot-preview.html  scroll-capture-bar.html  setup.sh  thumbnail.html  video-editor.html  vite.config.js
.github/workflows/: build.yml  release.yml
docs/: FEATURE_ROADMAP.md  LINUX_TODO.md  index.html
src/: App.svelte  camera-overlay.js  capture.rs  countdown.js  main.rs  pinned-screenshot.js  recording-bar.js  recording-overlay.js  region-selector.js  screenshot-preview.js  scroll-capture-bar.js  thumbnail.js  video-editor.js  writer.rs
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: create_icons.py  gen_recording_icon.py  gen_stop_icon.py  gen_tray_icon.py  generate_icons.py  icon.icns
src-tauri/src/: capture.rs  commands.rs  cursor.rs  lib.rs  main.rs  preview.rs  tray.rs  writer.rs  zoom.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/linux/: capture.rs  mod.rs  portal.rs  writer.rs
src-tauri/src/platform/macos/: camera.rs  capture.rs  editor.rs  mod.rs  mouse_tracker.rs  ocr.rs  scroll_capture.rs  writer.rs
src/lib/: CameraOverlay.svelte  Countdown.svelte  PinnedScreenshot.svelte  RecordingBar.svelte  RecordingIndicator.svelte  RecordingOverlay.svelte  RegionSelector.svelte  ScreenshotPreview.svelte  ScrollCaptureBar.svelte  Thumbnail.svelte
src/lib/editor/: BackgroundPicker.svelte  CursorOverlay.svelte  CursorSettings.svelte  ExportPanel.svelte  Timeline.svelte  Timeline.svelte.bak  Toolbar.svelte  VideoEditor.svelte  VideoEditor.svelte.bak  ZoomKeyframeEditor.svelte
