[package]
name = "zureshot"
version = "0.3.0"
description = "CleanShot X-style screen recorder for macOS"
authors = ["robert"]
edition = "2021"

[lib]
name = "zureshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
tokio = { version = "1", features = ["rt"] }

# macOS screen capture dependencies
objc2 = { version = "0.6", features = ["exception"] }
objc2-foundation = "0.3"
objc2-screen-capture-kit = "0.3"
objc2-core-media = "0.3"
objc2-core-video = "0.3"
objc2-av-foundation = { version = "0.3", features = ["AVVideoSettings", "AVAssetWriter", "AVAssetWriterInput"] }
objc2-core-graphics = { version = "0.3", features = ["CGColorSpace"] }
objc2-core-foundation = "0.3"
block2 = "0.6"
dispatch2 = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
