[package]
name = "zureshot"
version = "0.5.1-beta"
description = "Screen capture and recording tool"
authors = ["robert"]
edition = "2021"

[lib]
name = "zureshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
base64 = "0.22"
tokio = { version = "1", features = ["rt"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

# ── macOS screen capture dependencies ─────────────────────────────────
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", features = ["exception"] }
objc2-foundation = "0.3"
objc2-screen-capture-kit = "0.3"
objc2-core-media = "0.3"
objc2-core-video = "0.3"
objc2-av-foundation = { version = "0.3", features = ["AVVideoSettings", "AVAssetWriter", "AVAssetWriterInput"] }
objc2-core-graphics = { version = "0.3", features = ["CGColorSpace"] }
objc2-core-foundation = "0.3"
block2 = "0.6"
dispatch2 = "0.3"

# ── Linux dependencies (Phase 2.5: pure Rust D-Bus + in-process GStreamer) ──
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.10", default-features = false, features = ["tokio"] }
gstreamer = "0.23"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
